--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -172,8 +172,8 @@
 "step_4_description": "انضم إلى شوب<span class=\"color\">ين</span> اليوم، وبيع منتجاتك، واكتشف الكنوز الفريدة التي يمكنك شراؤها.",
 "explore_your_way_title": "استكشف بالطريقة التي تناسبك",
 "explore_your_way_description": "استخدم بحثنا متعدد المعايير لتحديد رغباتك أو دع نفسك تتفاجأ أثناء تصفح إعلانات الآخرين من شوب<span class=\"color\">ين</span> حتى تجد المنتج المثالي.",
-"add_to_favorites_title": "أضف إلى مفضلتك بنقرة واحدة",
-"add_to_favorites_description": "هل وجدت منتجاً يعجبك؟ اضغط على القلب الصغير لإضافته مباشرة إلى قائمة المفضلة الخاصة بك ولا تفوت فرصة مشاهدة منتجك المفضل.",
+"add_to_favorites_title": "أضف إلى قائمة المفضل لديك بنقرة واحدة",
+"add_to_favorites_description": "هل وجدت منتجاً يعجبك؟ اضغط على القلب الصغير لإضافته مباشرة إلى قائمة المفضل لديك ولا تفوت فرصة مشاهدة منتجك المفضل.",
 "validate_cart_title": "أتمم طلبك في لحظة",
 "validate_cart_description": "هل أنت مستعد للشراء؟ اضغط على \"تأكيد سلة المشتريات\". الأمر في غاية السهولة: يتم الدفع عند التسليم لضمان راحة بالك.",
 "receive_package_title": "استلم منتجك دون عناء",
