--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -118,7 +118,7 @@
 "Voilà le SHOPINER": "Here is the SHOPINER",
 "avis": "reviews",
 "Ventes": "Sales",
-"Annonces": "Listings",
+"Annonces": "Items",
 "Articles similaires": "Similar items",
 "title2": "Items from <span class=\"ft-bold\">SHOP<span class=\"color\">IN</span>ER</span>",
 "currency": "DH",
@@ -170,7 +170,7 @@
 "step_4_title": "It’s your turn!",
 "step_4_description": "Join SHOP<span class=\"color\">IN</span> today, sell your items, and discover unique treasures to buy.",
 "explore_your_way_title": "Explore Your Way",
-"explore_your_way_description": "Use our multi-criteria search to refine your desires or let yourself be surprised by browsing the listings of other SHOP<span class=\"color\">IN</span>ERS until you find the perfect match.",
+"explore_your_way_description": "Use our multi-criteria search to refine your desires or let yourself be surprised by browsing the items of other SHOP<span class=\"color\">IN</span>ERS until you find the perfect match.",
 "add_to_favorites_title": "Add to your favorites with one click",
 "add_to_favorites_description": "Found something you like? Tap the little heart to instantly add it to your favorites list and never lose sight of your gems.",
 "validate_cart_title": "Validate your cart in no time",
@@ -189,7 +189,7 @@
 "cookies_title": "4. Cookies:",
 "cookies_content": "The site uses cookies to distinguish users/visitors from other site users in order to help SHOP<span class=\"color\">IN</span> improve their experience while navigating the site.",
 "articles_for_sale_title": "5. Articles for Sale:",
-"articles_for_sale_content": "The seller commits to ensuring that any item listed for sale is free from defects (stains, holes, or tears...). The buyer, upon receiving such an item, has the right to return it. It is forbidden to resell counterfeit or illegal items. The seller agrees to provide real photos of the item being sold. The description of this item must correspond to its actual characteristics. SHOPIN has full rights to request the seller to change or remove their listing, or inform them that SHOPIN will do it directly in case of an error (e.g., incorrect category).",
+"articles_for_sale_content": "The seller commits to ensuring that any item listed for sale is free from defects (stains, holes, or tears...). The buyer, upon receiving such an item, has the right to return it. It is forbidden to resell counterfeit or illegal items. The seller agrees to provide real photos of the item being sold. The description of this item must correspond to its actual characteristics. SHOPIN has full rights to request the seller to change or remove their item, or inform them that SHOPIN will do it directly in case of an error (e.g., incorrect category).",
 "return_title": "6. Return:",
 "return_content": "In case of delivery failure, the seller must be available to receive the returned item.",
 "luxury_title": "7. SHOP<span class=\"color\">IN</span> Luxury:",
