--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -723,7 +723,9 @@
 "no_results": "Aucun résultat pour vos critères de recherche.",
 "Your message has been sent successfully!": "Votre message a été envoyé avec succès!",
 "Sending...": "Envoi en cours...",
-"We have received your message": "Nous avons bien reçu votre message"
+"We have received your message": "Nous avons bien reçu votre message",
+"use_code_verify_email": "Utilisez ce code dans l'application pour vérifier votre email."
+
 
 
 
