--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -721,7 +721,8 @@
 "no_results": "لا توجد نتائج لمعايير البحث الخاصة بك.",
 "Your message has been sent successfully!": "تم إرسال رسالتك بنجاح!",
 "Sending...": "جاري الإرسال...",
-"We have received your message": "لقد استلمنا رسالتك"
+"We have received your message": "لقد استلمنا رسالتك",
+"use_code_verify_email": "استخدم هذا الرمز في التطبيق للتحقق من بريدك الإلكتروني."
 
 
 }
