--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -722,7 +722,8 @@
 "no_results": "No results for your search criteria.",
 "Your message has been sent successfully!": "Your message has been sent successfully!",
 "Sending...": "Sending...",
-"We have received your message": "We have received your message"
+"We have received your message": "We have received your message",
+"use_code_verify_email": "Use this code in the app to verify your email."
 
 
 
