--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -188,7 +188,7 @@
 "confidentiality_content": "SHOP<span class=\"color\">IN</span> collects, stores, and uses certain personal data of users (first name, last name, phone number, city, and email), along with users' location data. SHOPIN ensures that users' personal information is protected against any illegal activities.",
 "cookies_title": "4. Cookies:",
 "cookies_content": "The site uses cookies to distinguish users/visitors from other site users in order to help SHOP<span class=\"color\">IN</span> improve their experience while navigating the site.",
-"articles_for_sale_title": "5. Articles for Sale:",
+"articles_for_sale_title": "5. Items for Sale:",
 "articles_for_sale_content": "The seller commits to ensuring that any item listed for sale is free from defects (stains, holes, or tears...). The buyer, upon receiving such an item, has the right to return it. It is forbidden to resell counterfeit or illegal items. The seller agrees to provide real photos of the item being sold. The description of this item must correspond to its actual characteristics. SHOPIN has full rights to request the seller to change or remove their item, or inform them that SHOPIN will do it directly in case of an error (e.g., incorrect category).",
 "return_title": "6. Return:",
 "return_content": "In case of delivery failure, the seller must be available to receive the returned item.",
@@ -304,7 +304,7 @@
 "remove": "Remove",
 "no_favorites_yet": "You haven't liked any post yet!",
 "results": "Results",
-"article_status": "Article Status",
+"article_status": "Item Status",
 "added_on": "Added On",
 "no_favorites": "You don't have any favorites yet!",
 "favorite_removed": "Item removed from favorites!",
@@ -378,8 +378,8 @@
 "Veuillez ajouter une image de votre carte d'identité avant de publier.": "Please upload your registration card image before publishing.",
 "Ajouter maintenant": "Add now",
 "Close": "Close",
-"article_added_successfully": "Article added successfully",
-"article_removed_from_cart": "Article removed from your cart",
+"article_added_successfully": "Item added successfully",
+"article_removed_from_cart": "Item removed from your cart",
 "remove_item_from_cart": "Do you want to remove this item from your cart?",
 "validate": "Validate",
 "cancel": "Cancel",
@@ -658,7 +658,7 @@
 "follow_us": "Follow us on our social media!",
 "new_message": "You have received a new message with the following subject:",
 "message1": "Message:",
-"for_article": "For the article:",
+"for_article": "For the item:",
 "thanks1": "Thank you for your attention!",
 "team1": "The team of",
 "shopin": "SHOP<strong style=\"color:#008080;\">IN</strong>",
