--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -723,7 +723,8 @@
 "Your message has been sent successfully!": "Your message has been sent successfully!",
 "Sending...": "Sending...",
 "We have received your message": "We have received your message",
-"use_code_verify_email": "Use this code in the app to verify your email."
+"use_code_verify_email": "Use this code in the app to verify your email.",
+"code_resent" : "We have resent your verification code."
 
 
 
