--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -724,7 +724,8 @@
 "Your message has been sent successfully!": "Votre message a été envoyé avec succès!",
 "Sending...": "Envoi en cours...",
 "We have received your message": "Nous avons bien reçu votre message",
-"use_code_verify_email": "Utilisez ce code dans l'application pour vérifier votre email."
+"use_code_verify_email": "Utilisez ce code dans l'application pour vérifier votre email.",
+"code_resent" : "Nous avons renvoyé votre code de vérification."
 
 
 
