--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -365,8 +365,8 @@
 "current_rib_number": "رقم RIB الحالي",
 "bank_name": "اسم البنك",
 "account_holder_name": "اسم صاحب الحساب",
-"cin_image": "صورة عن بطاقة التسجيل",
-"current_cin_image": "صورة بطاقة التسجيل الحالية",
+"cin_image": "صورة عن بطاقة التعريف",
+"current_cin_image": "صورة بطاقة التعريف الحالية",
 "save_bank_info_changes": "حفظ التغييرات على معلوماتي البنكية",
 "current_password": "كلمة المرور الحالية",
 "new_password": "كلمة المرور الجديدة",
@@ -376,7 +376,7 @@
 "create_post": "أنشئ منشورًا",
 "now": "الآن",
 "Attention!": "تنبيه",
-"Veuillez ajouter une image de votre carte d'identité avant de publier.": "يرجى إضافة صورة لبطاقة التسجيل قبل النشر",
+"Veuillez ajouter une image de votre carte d'identité avant de publier.": "يرجى إضافة صورة لبطاقة التعريف قبل النشر",
 "Ajouter maintenant": "أضف الآن",
 "Close": "إغلاق",
 "article_added_successfully": "تم إضافة المنتج بنجاح",
@@ -390,7 +390,7 @@
 "personal_details": "معلومات الشخصية",
 "subtitle": "يرجى ملء هذه المعلومات لإكمال ملفك الشخصي.",
 "rib_number": "رقم RIB",
-"cin_upload": "رفع صورة بطاقة الهوية (CIN)",
+"cin_upload": "رفع صورة بطاقة التعريف (CIN)",
 "download_image": "تحميل الصورة",
 "save": "حفظ",
 "update": "تحديث",
@@ -686,18 +686,18 @@
 "error.already_rated": "لا يمكنك تعديل تقييمك!",
 "error.too_late": "لا يمكنك إعطاء تقييم بعد مرور أكثر من أسبوعين على الشراء!",
 "success.rating_saved": "تم حفظ تقييمك بنجاح!",
-"cin_notification_title": "تمت الموافقة على بطاقة تسجيلك!",
-"cin_notification_message": "نبلغك أنه تمت الموافقة على بطاقة تسجيلك من قبل المسؤولين.",
-"cin_required_warning": "يجب عليك تحميل صورة من بطاقة التسجيل الخاصة بك قبل نشر منشور!<br>يرجى الذهاب إلى <strong>حسابي</strong> → <strong>المعلومات البنكية</strong> لإضافتها",
-"cin_pending_warning": "بطاقة التسجيل الخاصة بك قيد التحقق. ستتلقى إشعارًا بمجرد الموافقة عليها",
+"cin_notification_title": "تمت الموافقة على  بطاقة تعريفك!",
+"cin_notification_message": "نبلغك أنه تمت الموافقة على  بطاقة تعريفك من قبل المسؤولين.",
+"cin_required_warning": "يجب عليك تحميل صورة من بطاقة التعريف الخاصة بك قبل نشر منشور!<br>يرجى الذهاب إلى <strong>حسابي</strong> → <strong>المعلومات البنكية</strong> لإضافتها",
+"cin_pending_warning": "بطاقة التعريف الخاصة بك قيد التحقق. ستتلقى إشعارًا بمجرد الموافقة عليها",
 "Catégories des articles vendus!": "فئات المنتجات المباعة!",
 "Par ": "بواسطة ",
 "cin_img_info": "الأنواع المسموح بها: jpeg، png، jpg، gif، svg، webp",
 "invalid_status_to_rate": "يمكنك تقييم المنتج فقط بعد تسليمه.",
 "title_thanks": "شكراً لك!",
-"message_updated": "تم تحديث بطاقة التسجيل الخاصة بك وهي في انتظار التحقق.",
+"message_updated": "تم تحديث بطاقة التعريف الخاصة بك وهي في انتظار التحقق.",
 "message_notification": "سنرسل لك إشعارًا بمجرد التحقق منها.",
-"attente_validation" : "بطاقة التسجيل الخاصة بك  قيد المراجعة",
+"attente_validation" : "بطاقة التعريف الخاصة بك  قيد المراجعة",
 "Tanger-Tétouan-Al Hoceïma" : "طنجة-تطوان-الحسيمة",
 "L'Oriental" : "الشرق",
 "Fès-Meknès" : "فاس-مكناس",
@@ -723,6 +723,8 @@
 "Sending...": "جاري الإرسال...",
 "We have received your message": "لقد استلمنا رسالتك",
 "use_code_verify_email": "استخدم هذا الرمز في التطبيق للتحقق من بريدك الإلكتروني.",
-"code_resent" : "لقد قمنا بإرسال رمز التحقق مرة أخرى."
+"code_resent" : "لقد قمنا بإرسال رمز التحقق مرة أخرى.",
+"rib_number_size" : "يجب أن يحتوي رقم الحساب البنكي (RIB) على 13 حرفًا بالضبط."
+
 
 }
