--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -364,8 +364,8 @@
 "current_rib_number": "Current RIB number",
 "bank_name": "Bank name",
 "account_holder_name": "Account holder name",
-"cin_image": "Photo of the registration card",
-"current_cin_image": "Current photo of the registration card",
+"cin_image": "Photo of the national identity card",
+"current_cin_image": "Current photo of the national identity card",
 "save_bank_info_changes": "Save changes to my bank information",
 "current_password": "Current password",
 "new_password": "New password",
@@ -375,7 +375,7 @@
 "create_post": "Create a Post",
 "now": "Now",
 "Attention!": "Warning!",
-"Veuillez ajouter une image de votre carte d'identité avant de publier.": "Please upload your registration card image before publishing.",
+"Veuillez ajouter une image de votre carte d'identité avant de publier.": "Please upload your national identity card image before publishing.",
 "Ajouter maintenant": "Add now",
 "Close": "Close",
 "article_added_successfully": "Item added successfully",
@@ -687,18 +687,18 @@
 "error.too_late": "You cannot give a rating more than 2 weeks after your purchase!",
 "success.rating_saved": "Your rating has been saved!",
 "cin_approved_success": "CIN approved successfully.",
-"cin_notification_title": "Your registration card has been approved!",
-"cin_notification_message": "We inform you that your registration card has been approved by the administrators.",
-"cin_required_warning": "You must upload an image of your registration card before publishing a post!<br>Please go to <strong>My Account</strong> → <strong>Bank details</strong> to add it.",
-"cin_pending_warning": "Your registration card is being verified. You will receive a notification once it is approved.",
+"cin_notification_title": "Your national identity card has been approved!",
+"cin_notification_message": "We inform you that your national identity card has been approved by the administrators.",
+"cin_required_warning": "You must upload an image of your national identity card before publishing a post!<br>Please go to <strong>My Account</strong> → <strong>Bank details</strong> to add it.",
+"cin_pending_warning": "Your national identity card is being verified. You will receive a notification once it is approved.",
 "Catégories des articles vendus!": "Categories of sold items!",
 "Par ": "By ",
 "cin_img_info": "Allowed types: jpeg, png, jpg, gif, svg, webp",
 "invalid_status_to_rate": "You can only rate a post after it has been delivered.",
 "title_thanks": "Thank you!",
-"message_updated": "Your registration card has been updated and is awaiting validation.",
+"message_updated": "Your national identity card has been updated and is awaiting validation.",
 "message_notification": "We will send you a notification once validated.",
-"attente_validation" : "Your registration card is pending validation.",
+"attente_validation" : "Your national identity card is pending validation.",
 "Tanger-Tétouan-Al Hoceïma" : "Tanger-Tétouan-Al Hoceïma",
 "L'Oriental" : "L'Oriental",
 "Fès-Meknès" : "Fès-Meknès",
@@ -724,7 +724,9 @@
 "Sending...": "Sending...",
 "We have received your message": "We have received your message",
 "use_code_verify_email": "Use this code in the app to verify your email.",
-"code_resent" : "We have resent your verification code."
+"code_resent" : "We have resent your verification code.",
+"rib_number_size" : "The RIB number must contain exactly 13 characters."
+
 
 
 
