--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -366,8 +366,8 @@
 "current_rib_number": "Numéro de RIB actuel",
 "bank_name": "Nom de la banque",
 "account_holder_name": "Nom du titulaire",
-"cin_image": "Image de la carte d’immatriculation",
-"current_cin_image": "Image actuelle de la carte d’immatriculation",
+"cin_image": "Image de la carte d’identité",
+"current_cin_image": "Image actuelle de la carte d’identité",
 "save_bank_info_changes": "Sauvegarder les modifications de mes informations bancaires",
 "current_password": "Mot de passe actuel",
 "new_password": "Nouveau mot de passe",
@@ -377,7 +377,7 @@
 "create_post": "Créer une publication",
 "now": "Maintenant",
 "Attention!": "Attention !",
-"Veuillez ajouter une image de votre carte d'identité avant de publier.": "Veuillez ajouter une image de votre carte d’immatriculation avant de publier.",
+"Veuillez ajouter une image de votre carte d'identité avant de publier.": "Veuillez ajouter une image de votre carte d’identité avant de publier.",
 "Ajouter maintenant": "Ajouter maintenant",
 "Close": "Fermer",
 "article_added_successfully": "Article ajouté avec succès",
@@ -639,7 +639,7 @@
 "11 ans": "11 ans",
 "12 ans": "12 ans",
 "13 ans": "13 ans",
-"price_luxury_error_high": "Le prix de vente doit dépasser les 800 DH pour être ajouté à la catégorie LUXURY",
+"price_luxury_error_high": "Le prix de vente doit dépasser les 800 DH pour être ajouter à la catégorie LUXURY",
 "price_luxury_error_low": "Le prix de vente doit être inférieur à 800 DH pour la version non-luxury de cette catégorie.",
 "order_notification": "Notification de commande",
 "salutation": "Bonjour",
@@ -688,18 +688,18 @@
 "error.already_rated": "Vous ne pouvez pas modifier votre avis!",
 "error.too_late": "Vous ne pouvez pas donner une note plus de 2 semaine après votre achat!",
 "success.rating_saved": "Votre note a été enregistré !",
-"cin_notification_title": "Votre carte d’immatriculation a été validée !",
-"cin_notification_message": "Nous vous informons que votre carte d’immatriculation a été validée par les administrateurs.",
-"cin_required_warning": "Vous devez ajouter une image de votre carte d’immatriculation avant de publier un post !<br>Veuillez aller dans <strong>Mon compte</strong> → <strong>Coordonnées bancaires</strong> pour l'ajouter.",
-"cin_pending_warning": "Votre carte d’immatriculation est en cours de validation. Vous recevrez une notification une fois qu'elle aura été approuvée.",
+"cin_notification_title": "Votre carte d’identité a été validée !",
+"cin_notification_message": "Nous vous informons que votre carte d’identité a été validée par les administrateurs.",
+"cin_required_warning": "Vous devez ajouter une image de votre carte d’identité avant de publier un post !<br>Veuillez aller dans <strong>Mon compte</strong> → <strong>Coordonnées bancaires</strong> pour l'ajouter.",
+"cin_pending_warning": "Votre carte d’identité est en cours de validation. Vous recevrez une notification une fois qu'elle aura été approuvée.",
 "Catégories des articles vendus!": "Catégories des articles vendus!",
 "Par ": "Par ",
 "cin_img_info": "Types autorisés : jpeg, png, jpg, gif, svg, webp",
 "invalid_status_to_rate": "Vous pouvez évaluer une annonce uniquement après sa livraison.",
 "title_thanks": "Merci !",
-"message_updated": "Votre carte d’immatriculation a été mise à jour et est en attente de validation.",
+"message_updated": "Votre carte d’identité a été mise à jour et est en attente de validation.",
 "message_notification": "Nous vous enverrons une notification une fois validée.",
-"attente_validation" : "Votre carte d’immatriculation est en attente de validation",
+"attente_validation" : "Votre carte d’identité est en attente de validation",
 "Tanger-Tétouan-Al Hoceïma" : "Tanger-Tétouan-Al Hoceïma",
 "L'Oriental" : "L'Oriental",
 "Fès-Meknès" : "Fès-Meknès",
@@ -725,7 +725,8 @@
 "Sending...": "Envoi en cours...",
 "We have received your message": "Nous avons bien reçu votre message",
 "use_code_verify_email": "Utilisez ce code dans l'application pour vérifier votre email.",
-"code_resent" : "Nous avons renvoyé votre code de vérification."
+"code_resent" : "Nous avons renvoyé votre code de vérification.",
+"rib_number_size" : "Le numéro RIB doit contenir exactement 13 caractères."
 
 
 
