--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -724,7 +724,11 @@
 "We have received your message": "لقد استلمنا رسالتك",
 "use_code_verify_email": "استخدم هذا الرمز في التطبيق للتحقق من بريدك الإلكتروني.",
 "code_resent" : "لقد قمنا بإرسال رمز التحقق مرة أخرى.",
-"rib_number_size" : "يجب أن يحتوي رقم الحساب البنكي (RIB) على 13 حرفًا بالضبط."
+"rib_number_size" : "يجب أن يحتوي رقم الحساب البنكي (RIB) على 13 حرفًا بالضبط.",
+"cookies_title_1": "Nous utilisons des cookies",
+  "cookies_message": "Ce site utilise des cookies pour améliorer votre expérience de navigation, analyser le trafic et personnaliser le contenu. En cliquant sur \"Accepter\", vous consentez à l'utilisation de tous les cookies. Pour plus d'informations, consultez notre <a href=\":privacy_url\" target=\"_blank\">politique de confidentialité</a> et notre <a href=\":cookies_url\" target=\"_blank\">politique de cookies</a>.",
+  "cookies_accept": "Accepter tous les cookies",
+  "cookies_reject": "Refuser les cookies non essentiels"
 
 
 }
