--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -726,7 +726,11 @@
 "We have received your message": "Nous avons bien reçu votre message",
 "use_code_verify_email": "Utilisez ce code dans l'application pour vérifier votre email.",
 "code_resent" : "Nous avons renvoyé votre code de vérification.",
-"rib_number_size" : "Le numéro RIB doit contenir exactement 13 caractères."
+"rib_number_size" : "Le numéro RIB doit contenir exactement 13 caractères.",
+"cookies_title_1": "Nous utilisons des cookies",
+"cookies_message": "Ce site utilise des cookies pour améliorer votre expérience de navigation, analyser le trafic et personnaliser le contenu. En cliquant sur \"Accepter\", vous consentez à l'utilisation de tous les cookies. Pour plus d'informations, consultez notre <a href=\":privacy_url\" target=\"_blank\">politique de confidentialité</a> et notre <a href=\":cookies_url\" target=\"_blank\">politique de cookies</a>.",
+"cookies_accept": "Accepter tous les cookies",
+"cookies_reject": "Refuser les cookies non essentiels"
 
 
 
