fix-seo-accessiblity

--- a/resources/lang/ar.json
+++ b/resources/lang/ar.json
@@ -378,6 +378,10 @@
     "Veuillez ajouter une image de votre carte d'identité avant de publier.": "يرجى إضافة صورة لبطاقة التعريف قبل النشر",
     "Ajouter maintenant": "أضف الآن",
     "Close": "إغلاق",
+    "scroll_left": "مرر لليسار",
+    "scroll_right": "مرر لليمين",
+    "ping": "تثبيت",
+    "preview": "معاينة",
     "article_added_successfully": "تم إضافة المنتج بنجاح",
     "article_removed_from_cart": "تم إزالة المنتج من سلة التسوق الخاصة بك",
     "remove_item_from_cart": "هل تريد إزالة هذا المنتج من سلتك؟",
