--- a/resources/lang/fr.json
+++ b/resources/lang/fr.json
@@ -378,6 +378,11 @@
     "Veuillez ajouter une image de votre carte d'identité avant de publier.": "Veuillez ajouter une image de votre carte d’identité avant de publier.",
     "Ajouter maintenant": "Ajouter maintenant",
     "Close": "Fermer",
+    "close": "Fermer",
+    "scroll_left": "Défiler vers la gauche",
+    "scroll_right": "Défiler vers la droite",
+    "ping": "Épingler",
+    "preview": "Aperçu",
     "article_added_successfully": "Article ajouté avec succès",
     "article_removed_from_cart": "Article retiré de votre panier",
     "remove_item_from_cart": "Voulez-vous retirer cet article de votre panier?",
