--- a/resources/lang/en.json
+++ b/resources/lang/en.json
@@ -377,6 +377,10 @@
     "Veuillez ajouter une image de votre carte d'identité avant de publier.": "Please upload your national identity card image before publishing.",
     "Ajouter maintenant": "Add now",
     "Close": "Close",
+    "scroll_left": "Scroll left",
+    "scroll_right": "Scroll right",
+    "ping": "Pin",
+    "preview": "Preview",
     "article_added_successfully": "Item added successfully",
     "article_removed_from_cart": "Item removed from your cart",
     "remove_item_from_cart": "Do you want to remove this item from your cart?",
